[workspace]
members = [
  "traffic-analyzer",
  "traffic-analyzer-common",
  "traffic-analyzer-ebpf",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
aya = { version = "0.13", features = ["async_tokio"] }
aya-ebpf = "0.1.1"
aya-ebpf-bindings = "0.1.2"
aya-log = "0.2"
bytemuck = { version = "1", default-features = false, features = ["derive"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
