[package]
name = "traffic-analyzer-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autobins = false

[dependencies]
aya-ebpf.workspace = true
aya-ebpf-bindings.workspace = true
traffic-analyzer-common = { path = "../traffic-analyzer-common", default-features = false }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]
