[package]
name = "traffic-analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
aya.workspace = true
bytemuck.workspace = true
clap.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
traffic-analyzer-common = { path = "../traffic-analyzer-common" }
